# shoe_wear_tracker

./: .gitignore  README.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: code_style.yml  tests.yml
libraries/: strava.py
static_files/css/: main.scss
static_files/js/: main.js
templates/: base.html
templates/web/: form.html  index.html
templates/web/activities/: details.html  details_header.html  header.html  index.html  strava_list.html
templates/web/auth/: sign_in.html
templates/web/shoes/: activities.html  compare.html  details.html  details_header.html  header.html  index.html  photo_category.html  strava_list.html
tracker/: local_settings.ci.py  settings.py  urls.py
tracker/api/: authentication.py  parser.py  permissions.py  response.py  urls.py  utils.py  views.py
tracker/api/shoes/: forms.py  urls.py  views.py
tracker/api/strava/: forms.py  urls.py  views.py
tracker/apps/activities/: admin.py  models.py  utils.py
tracker/apps/activities/migrations/: 0001_initial.py  0002_remove_activity_average_pace_and_more.py  0003_activity_shoe_distance.py  0004_activity_no_photos.py
tracker/apps/photos/: admin.py  models.py  utils.py
tracker/apps/shoes/: admin.py  models.py
tracker/apps/users/: admin.py  models.py
tracker/core/: constants.py  model_fields.py  storages.py  utils.py
tracker/web/: urls.py  views.py
tracker/web/activities/: forms.py  urls.py  views.py
tracker/web/auth/: urls.py  views.py
tracker/web/shoes/: forms.py  urls.py  views.py
(+8 files in other folders)
